--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="mt-2 mb-4 bg-light rounded-3">
         <div class="container py-5">
-            <h1 class="display-5 fw-bold">mEOW MEOW</h1>
+            <h1 class="display-5 fw-bold">mEOW MEOWS</h1>
             <h1 class="display-5 fw-bold">120A3001</h1>
             <p class="col-md-8 fs-4">Progressive Web Apps (PWAs) are web apps that use service workers, manifests, and
                 other web-platform features in combination with progressive enhancement to give users an experience on
